# TerminalMomentum

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
config/: terminalmomentum.conf
include/: calc-example.h
src/: TerminalMomentum.cpp  calc-example.cpp
